# imagebrowser

./: CMakeLists.txt  Makefile
src/: database.cpp  database.h  main.cpp  thumbs.cpp  thumbs.h  util.cpp  util.h  web.cpp  web.h
templates/: index.html
